<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloChess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bR">♜</string>
    <string name="bN">♞</string>
    <string name="bB">♝</string>
    <string name="bQ">♛</string>
    <string name="bK">♚</string>
    <string name="bp">♟</string>
    <string name="blank_spot"></string>
    <string name="wR">♖</string>
    <string name="wN">♘</string>
    <string name="wB">♗</string>
    <string name="wQ">♕</string>
    <string name="wK">♔</string>
    <string name="wp">♙</string>
    <string name="undo_button">Undo</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="Play_Game">Play Game</string>
    <string name="Playback_Game">Playback Game</string>
    <string name="Record_Game">Record Game</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_playback">PlaybackActivity</string>
    <string name="forward_button">Forward</string>
    <string name="back_button">Backward</string>
    <string name="AI">AI</string>
    <string name="undoMove">Undo</string>
    <string name="resign">Resign</string>
    <string name="draw">Draw</string>
    <string name="title_activity_list_games">ListGames</string>

</resources>