<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:text="@string/Play_Game" />

    <Button
        android:id="@+id/button3"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:text="@string/Playback_Game" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.05"
        android:text="@string/Record_Game" />

</LinearLayout>